--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,9 +6,9 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
-        <div class="card shadow">
-            <div class="card-header bg-primary text-white text-center">
-                <h4 class="mb-0">
+        <div class="card shadow fade-in">
+            <div class="card-header text-center">
+                <h4 class="mb-0 text-primary-green">
                     <i class="fas fa-sign-in-alt me-2"></i>
                     Giriş Yap
                 </h4>
@@ -57,7 +57,7 @@
                 
                 <div class="text-center mt-3">
                     <p class="mb-0">Hesabınız yok mu? 
-                        <a href="{% url 'register' %}" class="text-primary">Kayıt olun</a>
+                        <a href="{% url 'register' %}" class="text-primary-green">Kayıt olun</a>
                     </p>
                 </div>
             </div>
